# MuytiEngine

./: .gitignore  CMakeLists.txt  README.md
Docs/: Architecture.md  CodingStyle.md  ECS.md  ForMe.md  GUI.md  GitWorkflow.md  Physics.md  Renderer.md  Roadmap.md  Scripting.md
Docs/Decisions/: 0001-CMake.md  0002-Vulkan.md  0003.Logger.md
Engine/Core/include/: Application.h  Logger.h
Engine/Core/src/: Application.cpp  Logger.cpp
Engine/Platform/: Window.h
Engine/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
